# Ultimate-3D-modeling

./: CMakeLists.txt  Camera.h  README.md  VertexData.cpp  VertexData.h
cpp/: Camera.cpp  CubeGenerator.cpp  CubeGenerator.h  native-lib.cpp
java/: GLRenderer.java  MainActivity.java
